RESOLVED FIXED158592
REGRESSION: Web Inspector: IndexedDB does not show ObjectStore data
https://bugs.webkit.org/show_bug.cgi?id=158592
Summary REGRESSION: Web Inspector: IndexedDB does not show ObjectStore data
Joseph Pecoraro
Reported 2016-06-09 16:16:06 PDT
Summary: IndexedDB does not show ObjectStore data Steps to Reproduce: 1. Inspect <https://matthew-andrews.github.io/offline-todo/> 2. Add Todo Items 3. Show Storage Tab 4. Show "todo" Object Store => Empty 5. Add more data 6. Refresh Object Store => Uncaught exceptions Notes: - Seems to be a regression with ModernIDB.
Attachments
[PATCH] Proposed Fix (5.69 KB, patch)
2016-06-09 16:21 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2016-06-09 16:18:39 PDT
Joseph Pecoraro
Comment 2 2016-06-09 16:21:27 PDT
Created attachment 280965 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2016-06-09 16:46:38 PDT
Comment on attachment 280965 [details] [PATCH] Proposed Fix Clearing flags on attachment: 280965 Committed r201893: <http://trac.webkit.org/changeset/201893>
WebKit Commit Bot
Comment 4 2016-06-09 16:46:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.