REGRESSION: Web Inspector: IndexedDB does not show ObjectStore data https://bugs.webkit.org/show_bug.cgi?id=158592 <rdar://problem/26730696>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-06-09
Reviewed by Timothy Hatcher.

Source/WebCore:

* inspector/InspectorIndexedDBAgent.cpp:
(WebCore::DataLoader::execute):
Ensure the IDBTransaction is active when attempting to open a cursor.

(WebCore::OpenCursorCallback::handleEvent):
End, when the cursor result is empty, like we do for script results.

Source/WebInspectorUI:

* UserInterface/Views/DataGrid.js:
(WebInspector.DataGrid.prototype._noteRowRemoved):
(WebInspector.DataGridNode.prototype._detach):
When rows are removed in the non-Virtual DataGrids, we should
actually remove the row.

* UserInterface/Views/IndexedDatabaseObjectStoreContentView.js:
(WebInspector.IndexedDatabaseObjectStoreContentView):
(WebInspector.IndexedDatabaseObjectStoreContentView.prototype._fetchMoreData.processEntries):
(WebInspector.IndexedDatabaseObjectStoreContentView.prototype._fetchMoreData):
Don't use the delete operator. Use a boolean.

Canonical link: https://commits.webkit.org/176675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201893 268f45cc-cd09-0410-ab3c-d52691b4dbfc