Source/WebInspectorUI/UserInterface/Views/IndexedDatabaseObjectStoreContentView.js
@@ -74,6 +74,7 @@ WebInspector.IndexedDatabaseObjectStoreContentView = class IndexedDatabaseObject
 
         this._entries = [];
 
+        this._fetchingMoreData = false;
         this._fetchMoreData();
 
         this._refreshButtonNavigationItem = new WebInspector.ButtonNavigationItem("indexed-database-object-store-refresh", WebInspector.UIString("Refresh"), "Images/ReloadFull.svg", 13, 13);
@@ -143,7 +144,7 @@ WebInspector.IndexedDatabaseObjectStoreContentView = class IndexedDatabaseObject
                 this._dataGrid.appendChild(dataGridNode);
             }
 
-            delete this._fetchingMoreData;
+            this._fetchingMoreData = false;
 
             if (moreAvailable && this._dataGrid.isScrolledToLastRow())
                 this._fetchMoreData();
